<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">Sugar Alarm</string>
    <string name="settings_text">Settings</string>
    <string name="button10_text">10 min</string>
    <string name="button20_text">20 min</string>
    <string name="button30_text">30 min</string>
    <string name="button60_text">1 h</string>
    <string name="pink_mode">Pink\n theme</string>
    <string name="blue_mode">Blue\n theme</string>
    <string name="text_github">Author\'s Github</string>




    <!-- General Preferences -->
    <string name="general_header">General</string>
    <string name="general_summary_off">Alarms will be used instead of timers.</string>
    <string name="general_summary_on">Timers will be used instead of alarms.</string>
    <string name="notification_type_title">Notification type</string>
    <string name="language_title">Language</string>
    <string name="green_theme">Green\n theme</string>

    <!-- Appearance Preferences -->
    <string name="appearance_header">Appearance</string>
    <string name="appearance_summary">Select your favourite theme below.</string>


    <!-- Contact Preferences -->
    <string name="contact_header">Contact</string>
    <string name="contact_summary">Select a way of contact.</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>