<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:layout="@layout/preference_text_view"
        android:title="@string/general_header">

        <com.example.sugaralarm.CustomSwitchPreference
            app:key="notificationType"
            app:summaryOff="@string/general_summary_off"
            app:summaryOn="@string/general_summary_on"
            app:title="@string/notification_type_title" />

        <ListPreference
            app:defaultValue="English"
            app:entries="@array/languages_entries"
            app:entryValues="@array/languages_values"
            app:key="language"
            app:title="@string/language_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>


    <PreferenceCategory
        android:layout="@layout/preference_text_view"
        android:summary="@string/appearance_summary"
        android:title="@string/appearance_header">

        <Preference
            app:key="theme_buttons_key"
            app:layout="@layout/theme_buttons_settings" />

    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/preference_text_view"
        app:summary="@string/contact_summary"
        app:title="@string/contact_header">

        <Preference
            app:key="github"
            app:title="Github" />
    </PreferenceCategory>


</PreferenceScreen>