<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:minHeight="50dp"
        android:text="@string/turn_on_alarms"
        android:textSize="20sp"
        android:thumb="@mipmap/ic_launcher_round"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:switchPadding="30sp"
        app:trackTint="@drawable/switch_track" />

    <Button
        android:id="@+id/button_pink"
        android:layout_width="104dp"
        android:layout_height="103dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/pink_button"
        android:text="@string/pink_mode"
        app:cornerRadius="90dp"
        app:layout_constraintEnd_toStartOf="@+id/button_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch2" />

    <Button
        android:id="@+id/button_blue"
        android:layout_width="104dp"
        android:layout_height="103dp"
        android:text="@string/blue_mode"
        android:backgroundTint="@color/navy_button"
        app:cornerRadius="90dp"
        app:layout_constraintBottom_toBottomOf="@+id/button_pink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_pink"
        app:layout_constraintTop_toTopOf="@+id/button_pink" />

    <Button
        android:id="@+id/button_github"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/text_github"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>